--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <!-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
         <div id="Jumbo" class="jumbotron">
-            <h1 class="display-4">Distribuidora</h1>
+            <h1 class="display-4" style="text-decoration:underline">Distribuidora</h1>
             <p class="lead" style='display:block;'>Sistema de gestion y facturación para procesos de negocios dedicados a la distribucion y comercializacion de productos</p>
             <hr class="my-1">
         </div>
@@ -52,29 +52,29 @@
               <div class="carousel-item active">
                 <img src="Imagenes/Factura.jpeg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                  <h5>Facturacion de electronica</h5>
+                  <p>Facturacion electronica valida por AFIP</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="Imagenes/Proveedore.jpeg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
+                  <h5>Gestion de proovedores</h5>
+                  <p>Gestione ingresos y horarios de proveedores al negocio</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="Imagenes/Clientes.jpeg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                  <h5>Gestion de clientes</h5>
+                  <p>Gestiones a cada uno de sus clientes con nombre, apellido, documentos, negocio e historia </p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="Imagenes/Estadisticas.jpeg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                  <h5 style="color: black;">Estadisticas</h5>
+                  <p style="color: black;">Gestione y compare las ganancias y ventas del negocio en funcion del tiempo</p>
                 </div>
               </div>
             </div>
@@ -97,7 +97,12 @@
                         <img class="card-img-top" src="Imagenes/Factura.jpeg" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">Facturacion</h5>
-                          <p class="card-text">| Buscar | Eliminar | Agregar | </p>
+                          <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Factura electronica (AFIP)</li>
+                            <li class="list-group-item">Nota de credito</li>
+                            <li class="list-group-item">Remito</li>
+                            <li class="list-group-item">Lista de Facturas</li>
+                          </ul>
                           <a href="#" class="btn btn-primary">ir</a>
                         </div>
                       </div>
@@ -107,7 +112,12 @@
                         <img class="card-img-top" src="Imagenes/Stock.jpeg" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">Catalogo</h5>
-                          <p class="card-text">| Buscar | Eliminar | Agregar |</p>
+                          <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Lista de precios</li>
+                            <li class="list-group-item">Marcas</li>
+                            <li class="list-group-item">Productos</li>
+                            <li class="list-group-item">Stock</li>
+                          </ul>
                           <a href="#" class="btn btn-primary">ir</a>
                         </div>
                       </div>
@@ -117,17 +127,27 @@
                         <img class="card-img-top" src="Imagenes/Cuenta.jpeg" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">Cuentas</h5>
-                          <p class="card-text">| Buscar | Eliminar | Modificar |</p>
+                          <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Cuentas corriente</li>
+                            <li class="list-group-item">Saldos</li>
+                            <li class="list-group-item">Metodos de pago</li>
+                            <li class="list-group-item">Historial</li>
+                          </ul>
                           <a href="#" class="btn btn-primary">ir</a>
                         </div>
                       </div>
                 </div>
                 <div class='col-sm-3'>
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="Imagenes/Clientes.jpeg" alt="Card image cap">
+                        <img class="card-img-top" src="Imagenes/Estadisticas.jpeg" alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title">Clientes</h5>
-                          <p class="card-text">| Buscar | Eliminar | Agregar |</p>
+                          <h5 class="card-title">Estadisticas</h5>
+                          <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Estadisticas de ventas</li>
+                            <li class="list-group-item">Estadisticas de ganacia</li>
+                            <li class="list-group-item">Estadisticas de perdidas</li>
+                            <li class="list-group-item">Historial</li>
+                          </ul>
                           <a href="#" class="btn btn-primary">ir</a>
                         </div>
                       </div>
@@ -142,7 +162,10 @@
                         <img class="card-img-top" src="Imagenes/Proveedore.jpeg" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">Proveedores</h5>
-                          <p class="card-text">| Buscar | Eliminar | Agregar |</p>
+                          <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Lista de proveedores</li>
+                            <li class="list-group-item"></li>
+                          </ul>
                           <a href="#" class="btn btn-primary">ir</a>
                         </div>
                       </div>
@@ -152,17 +175,23 @@
                         <img class="card-img-top" src="Imagenes/Transportista.jpeg" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">Transportistas</h5>
-                          <p class="card-text">| Buscar | Eliminar | Agregar |</p>
+                          <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Lista de transportistas</li>
+                            <li class="list-group-item"></li>
+                          </ul>
                           <a href="#" class="btn btn-primary">ir</a>
                         </div>
                       </div>
                 </div>
                 <div class='col-sm-3'>
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="Imagenes/Estadisticas.jpeg" alt="Card image cap">
+                        <img class="card-img-top" src="Imagenes/Clientes.jpeg" alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title">Estadisticas</h5>
-                          <p class="card-text">| Consultar |</p>
+                          <h5 class="card-title">Clientes</h5>
+                          <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Listado de clientes</li>
+                            <li class="list-group-item"></li>
+                          </ul>
                           <a href="#" class="btn btn-primary">ir</a>
                         </div>
                       </div>
@@ -172,7 +201,10 @@
                         <img class="card-img-top" src="Imagenes/Empleados.jpeg" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">Empleados</h5>
-                          <p class="card-text">| Buscar | Eliminar | Agregar |</p>
+                          <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Gestion de empleados</li>
+                            <li class="list-group-item"></li>
+                          </ul>
                           <a href="#" class="btn btn-primary">ir</a>
                         </div>
                       </div>
@@ -197,10 +229,20 @@
             </div>
         </div>
     </section>
+    <br>
+    <footer>
+        <div id="Pie">
+            <p>Distribuidora</p>
+            <p>Desarrollador: Bautista Basilio</p>
+            <p>Email: batubasilio@hotmail.com</p>
+            <img src="Imagenes/Afip_logo.png">
+        </div>
+
+    </footer>
         <!-- JavaScript Bundle with Popper -->
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     
 </html>
