--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     </head>
     <header>
         <nav id="BarraMenu" class="navbar navbar-expand-lg navbar-light bg-primary">
-            <a class="navbar-brand" href="index.html">Distribuidora</a>
+            <a class="navbar-brand" href="index.html">GAMER SHOP</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#">Catalogo</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Cuentas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Facturacion</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Clientes</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Proveedores</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Transportistas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Estadisticas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Tienda</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Juegos de ps5</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Juegos de ps4</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Juegos de xbox</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Tarjetas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Preguntas frecuentes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Ayuda</a></li>
                 </ul> 
                 <div id="Iniciar" class="my-2 my-lg-0">
                     <button id="btnInciar" class="btn btn-success" onclick="window.location.href='Inicia.html'">Ingresar</button>
@@ -30,17 +30,8 @@
             </div>
         </nav>
     </header>
-    <section>
-
-        <!-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
-        <div id="Jumbo" class="jumbotron">
-            <h1 class="display-4" style="text-decoration:underline">Distribuidora</h1>
-            <p class="lead" style='display:block;'>Sistema de gestion y facturación para procesos de negocios dedicados a la distribucion y comercializacion de productos</p>
-            <hr class="my-1">
-        </div>
-        <br>
+    <main>
         <!----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
-
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -50,31 +41,32 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="Imagenes/Factura.jpeg" class="d-block w-100" alt="...">
+                <img src="Imagenes/Battlefield.jpeg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Facturacion de electronica</h5>
-                  <p>Facturacion electronica valida por AFIP</p>
+                  <h5>Battlefield 2042 (Nuevo)</h5>
+                  <p>Reserva el juego ahora mismo</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="Imagenes/Proveedore.jpeg" class="d-block w-100" alt="...">
+                <img src="Imagenes/Coldwar.webp" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Gestion de proovedores</h5>
-                  <p>Gestione ingresos y horarios de proveedores al negocio</p>
+                  <h5>Call of duty cold war</h5>
+                  <p>Vive la experiencia de la guerra fria</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="Imagenes/Clientes.jpeg" class="d-block w-100" alt="...">
+                <img src="Imagenes/God.webp" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Gestion de clientes</h5>
-                  <p>Gestiones a cada uno de sus clientes con nombre, apellido, documentos, negocio e historia </p>
+                  <h5>God of war</h5>
+                  <p>No puedes perderte la continuidad de la tragica historia de nuestro querido espartano en tierras nordicas</p>
+                  <p>Premio game awards 2018</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="Imagenes/Estadisticas.jpeg" class="d-block w-100" alt="...">
+                <img src="Imagenes/PaseBatalla.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5 style="color: black;">Estadisticas</h5>
-                  <p style="color: black;">Gestione y compare las ganancias y ventas del negocio en funcion del tiempo</p>
+                  <h5 style="color: black;">Pase de batalla (fort nite)</h5>
+                  <p style="color: black;">Desbloque todo el imventario de la 7ma temporada de fortnite</p>
                 </div>
               </div>
             </div>
@@ -94,14 +86,14 @@
             <div class='row'>
                 <div class='col-sm-3'>
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="Imagenes/Factura.jpeg" alt="Card image cap">
+                        <img class="card-img-top" src="Imagenes/tienda.jpeg" alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title">Facturacion</h5>
+                          <h5 class="card-title">Tienda</h5>
                           <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Factura electronica (AFIP)</li>
-                            <li class="list-group-item">Nota de credito</li>
-                            <li class="list-group-item">Remito</li>
-                            <li class="list-group-item">Lista de Facturas</li>
+                            <li class="list-group-item">Juegos de playstation</li>
+                            <li class="list-group-item">Juegos de xbox</li>
+                            <li class="list-group-item">Tarjetas</li>
+                            <li class="list-group-item">Pase de batalla</li>
                           </ul>
                           <a href="#" class="btn btn-primary">ir</a>
                         </div>
@@ -109,14 +101,14 @@
                 </div>
                 <div class='col-sm-3'>
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="Imagenes/Stock.jpeg" alt="Card image cap">
+                        <img class="card-img-top" src="Imagenes/ps5.jpeg" alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title">Catalogo</h5>
+                          <h5 class="card-title">Juegos de ps5</h5>
                           <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Lista de precios</li>
-                            <li class="list-group-item">Marcas</li>
-                            <li class="list-group-item">Productos</li>
-                            <li class="list-group-item">Stock</li>
+                            <li class="list-group-item">Call of duty</li>
+                            <li class="list-group-item">god of war</li>
+                            <li class="list-group-item">battlefield</li>
+                            <li class="list-group-item">grand theft autos</li>
                           </ul>
                           <a href="#" class="btn btn-primary">ir</a>
                         </div>
@@ -124,14 +116,14 @@
                 </div>
                 <div class='col-sm-3'>
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="Imagenes/Cuenta.jpeg" alt="Card image cap">
+                        <img class="card-img-top" src="Imagenes/ps4.jpeg" alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title">Cuentas</h5>
+                          <h5 class="card-title">Juegos de ps4</h5>
                           <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Cuentas corriente</li>
-                            <li class="list-group-item">Saldos</li>
-                            <li class="list-group-item">Metodos de pago</li>
-                            <li class="list-group-item">Historial</li>
+                            <li class="list-group-item">Call of duty</li>
+                            <li class="list-group-item">god of war</li>
+                            <li class="list-group-item">battlefield</li>
+                            <li class="list-group-item">grand theft autos</li>
                           </ul>
                           <a href="#" class="btn btn-primary">ir</a>
                         </div>
@@ -139,14 +131,14 @@
                 </div>
                 <div class='col-sm-3'>
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="Imagenes/Estadisticas.jpeg" alt="Card image cap">
+                        <img class="card-img-top" src="Imagenes/xbox.jpeg" alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title">Estadisticas</h5>
+                          <h5 class="card-title">Juegos de xbox</h5>
                           <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Estadisticas de ventas</li>
-                            <li class="list-group-item">Estadisticas de ganacia</li>
-                            <li class="list-group-item">Estadisticas de perdidas</li>
-                            <li class="list-group-item">Historial</li>
+                            <li class="list-group-item">halo</li>
+                            <li class="list-group-item">forza Motorsport</li>
+                            <li class="list-group-item">the Ascent</li>
+                            <li class="list-group-item">Exclusivos de esta consola</li>
                           </ul>
                           <a href="#" class="btn btn-primary">ir</a>
                         </div>
@@ -157,14 +149,29 @@
 
         <div class="container-flud AccesosDirectos">
             <div class='row'>
+              <div class='col-sm-3'>
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="Imagenes/Empleados.jpeg" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Fortnite</h5>
+                      <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Pavos</li>
+                        <li class="list-group-item">Pase de batalla</li>
+                        <li class="list-group-item">Combos</li>
+                      </ul>
+                    <a href="#" class="btn btn-primary">ir</a>
+                  </div>
+                </div>
+              </div>
                 <div class='col-sm-3'>
                     <div class="card" style="width: 18rem;">
                         <img class="card-img-top" src="Imagenes/Proveedore.jpeg" alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title">Proveedores</h5>
+                          <h5 class="card-title">Tarjetas</h5>
                           <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Lista de proveedores</li>
-                            <li class="list-group-item"></li>
+                            <li class="list-group-item">PSN plus</li>
+                            <li class="list-group-item">Xbox gold</li>
+                            <li class="list-group-item">Pase de batalla</li>
                           </ul>
                           <a href="#" class="btn btn-primary">ir</a>
                         </div>
@@ -174,10 +181,11 @@
                     <div class="card" style="width: 18rem;">
                         <img class="card-img-top" src="Imagenes/Transportista.jpeg" alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title">Transportistas</h5>
+                          <h5 class="card-title">Pregunstas frecuentes</h5>
                           <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Lista de transportistas</li>
-                            <li class="list-group-item"></li>
+                            <li class="list-group-item">Quienes somos?</li>
+                            <li class="list-group-item">Que es un juego digital?</li>
+                            <li class="list-group-item">Son juegos originales?</li>
                           </ul>
                           <a href="#" class="btn btn-primary">ir</a>
                         </div>
@@ -187,23 +195,11 @@
                     <div class="card" style="width: 18rem;">
                         <img class="card-img-top" src="Imagenes/Clientes.jpeg" alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title">Clientes</h5>
+                          <h5 class="card-title">Ayuda</h5>
                           <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Listado de clientes</li>
-                            <li class="list-group-item"></li>
-                          </ul>
-                          <a href="#" class="btn btn-primary">ir</a>
-                        </div>
-                      </div>
-                </div>
-                <div class='col-sm-3'>
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="Imagenes/Empleados.jpeg" alt="Card image cap">
-                        <div class="card-body">
-                          <h5 class="card-title">Empleados</h5>
-                          <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Gestion de empleados</li>
-                            <li class="list-group-item"></li>
+                            <li class="list-group-item">Comenta tu problema</li>
+                            <li class="list-group-item">respuesta en menos de 24hs</li>
+                            <li class="list-group-item">Completa el formulario</li>
                           </ul>
                           <a href="#" class="btn btn-primary">ir</a>
                         </div>
@@ -216,7 +212,7 @@
                 <div class='col-sm-12'>
                     <div id="Panel" class="panel panel-default" >
                         <div id="panelCabeza"class="panel-heading bg-danger">Cuidados!              <img src="Imagenes/warning.png"></div>
-                        <div id="panelCuerpo" class="panel-body panelCuerpo">
+                        <div id="panelCuerpo" class="panel-body panelCuerpo" style="background-color: white;">
                             <ul>
                                 <li>Toda factura electronica (AFIP) es unica e inmodificable!</li>
                                 <ul>
@@ -228,11 +224,11 @@
                 </div>
             </div>
         </div>
-    </section>
+      </main>
     <br>
     <footer>
         <div id="Pie">
-            <p>Distribuidora</p>
+            <p>Gamer shop</p>
             <p>Desarrollador: Bautista Basilio</p>
             <p>Email: batubasilio@hotmail.com</p>
             <img src="Imagenes/Afip_logo.png">
