--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#">Tienda</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Tienda.html">Tienda</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Juegos de ps5</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Juegos de ps4</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Juegos de xbox</a></li>
@@ -25,7 +25,7 @@
                     <li class="nav-item"><a class="nav-link" href="#">Ayuda</a></li>
                 </ul> 
                 <div id="Iniciar" class="my-2 my-lg-0">
-                    <button id="btnInciar" class="btn btn-success" onclick="window.location.href='Inicia.html'">Ingresar</button>
+                    <button id="btnInciar" class="btn btn-success" onclick="window.location.href='#'">Ingresar</button>
                 </div>
             </div>
         </nav>
@@ -38,6 +38,7 @@
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -67,6 +68,13 @@
                 <div class="carousel-caption d-none d-md-block">
                   <h5 style="color: black;">Pase de batalla (fort nite)</h5>
                   <p style="color: black;">Desbloque todo el imventario de la 7ma temporada de fortnite</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="Imagenes/Fif.jpeg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5 style="color: black;">Fifa 2022</h5>
+                  <p style="color: black;">Juega con tu equipo favorito</p>
                 </div>
               </div>
             </div>
@@ -151,7 +159,7 @@
             <div class='row'>
               <div class='col-sm-3'>
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="Imagenes/Empleados.jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="Imagenes/Fort.jpeg" alt="Card image cap">
                     <div class="card-body">
                       <h5 class="card-title">Fortnite</h5>
                       <ul class="list-group list-group-flush">
@@ -165,7 +173,7 @@
               </div>
                 <div class='col-sm-3'>
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="Imagenes/Proveedore.jpeg" alt="Card image cap">
+                        <img class="card-img-top" src="Imagenes/Tarjetas.jpeg" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">Tarjetas</h5>
                           <ul class="list-group list-group-flush">
@@ -179,9 +187,9 @@
                 </div>
                 <div class='col-sm-3'>
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="Imagenes/Transportista.jpeg" alt="Card image cap">
+                        <img class="card-img-top" src="Imagenes/Preg.png" alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title">Pregunstas frecuentes</h5>
+                          <h5 class="card-title">Preguntas frecuentes</h5>
                           <ul class="list-group list-group-flush">
                             <li class="list-group-item">Quienes somos?</li>
                             <li class="list-group-item">Que es un juego digital?</li>
@@ -193,7 +201,7 @@
                 </div>
                 <div class='col-sm-3'>
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="Imagenes/Clientes.jpeg" alt="Card image cap">
+                        <img class="card-img-top" src="Imagenes/aten.jpeg" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">Ayuda</h5>
                           <ul class="list-group list-group-flush">
@@ -214,9 +222,11 @@
                         <div id="panelCabeza"class="panel-heading bg-danger">Cuidados!              <img src="Imagenes/warning.png"></div>
                         <div id="panelCuerpo" class="panel-body panelCuerpo" style="background-color: white;">
                             <ul>
-                                <li>Toda factura electronica (AFIP) es unica e inmodificable!</li>
+                                <li>Datos importantes a la hora de registrarse</li>
                                 <ul>
-                                    <li>Solucion: Crear nota de credito y volver a facturar</li>
+                                    <li>Nombre y apellido como aparece en el documento</li>
+                                    <li>Foto de documento (ambos lados)</li>
+                                    <li>Foto de la persona junto al documento</li>
                                 </ul>
                             </ul>
                         </div>
