--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="container-flud AccesosDirectos">
             <div class='row'>
                 <div class='col-sm-3'>
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: auto;">
                         <img class="card-img-top" src="Imagenes/tienda.jpeg" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">Tienda</h5>
@@ -108,7 +108,7 @@
                       </div>
                 </div>
                 <div class='col-sm-3'>
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: auto;">
                         <img class="card-img-top" src="Imagenes/ps5.jpeg" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">Juegos de ps5</h5>
@@ -123,7 +123,7 @@
                       </div>
                 </div>
                 <div class='col-sm-3'>
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: auto;">
                         <img class="card-img-top" src="Imagenes/ps4.jpeg" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">Juegos de ps4</h5>
@@ -138,7 +138,7 @@
                       </div>
                 </div>
                 <div class='col-sm-3'>
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: auto;">
                         <img class="card-img-top" src="Imagenes/xbox.jpeg" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">Juegos de xbox</h5>
@@ -158,7 +158,7 @@
         <div class="container-flud AccesosDirectos">
             <div class='row'>
               <div class='col-sm-3'>
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: auto;">
                     <img class="card-img-top" src="Imagenes/Fort.jpeg" alt="Card image cap">
                     <div class="card-body">
                       <h5 class="card-title">Fortnite</h5>
@@ -172,7 +172,7 @@
                 </div>
               </div>
                 <div class='col-sm-3'>
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: auto;">
                         <img class="card-img-top" src="Imagenes/Tarjetas.jpeg" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">Tarjetas</h5>
@@ -186,7 +186,7 @@
                       </div>
                 </div>
                 <div class='col-sm-3'>
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: auto;">
                         <img class="card-img-top" src="Imagenes/Preg.png" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">Preguntas frecuentes</h5>
@@ -200,7 +200,7 @@
                       </div>
                 </div>
                 <div class='col-sm-3'>
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: auto;">
                         <img class="card-img-top" src="Imagenes/aten.jpeg" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title">Ayuda</h5>
