Seccion agregadas (ayuda y Preguntas frecuentes)

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     <li class="nav-item"><a class="nav-link" href="#">Juegos de ps4</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Juegos de xbox</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Tarjetas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Preguntas frecuentes</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Ayuda</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Preguntas.html">Preguntas frecuentes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Ayuda.html">Ayuda</a></li>
                 </ul> 
                 <div id="Iniciar" class="my-2 my-lg-0">
                     <button id="btnInciar" class="btn btn-success" onclick="window.location.href='#'">Ingresar</button>
