--- a/Tienda.html
+++ b/Tienda.html
@@ -33,8 +33,8 @@
                         <li class="nav-item"><a class="nav-link" href="#">Juegos de ps4</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Juegos de xbox</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Tarjetas</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Preguntas frecuentes</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Ayuda</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Preguntas.html">Preguntas frecuentes</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Ayuda.html">Ayuda</a></li>
                     </ul> 
                     <div id="Iniciar" class="my-2 my-lg-0">
                         <button id="btnInciar" class="btn btn-success" onclick="window.location.href='#'">Ingresar</button>
@@ -169,5 +169,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+        <script> 
+            var variable=3+4*6+3 
+            console.log('variable='+variable);
+        </script>
     </body>
 </html>
